--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header>
     <i class="bi bi-calculator"></i> BMI Calculator
   </header>
-  <img src="/images/8549530.jpg" alt="">
+  <img src="images/8549530.jpg" alt="">
   <div class="for_big_screen">
     <!-- -------------------------input section----------------------------------- -->
     <div class="input_section_for_bmi">
@@ -76,7 +76,7 @@
     </p>
   </details>
 
-  <img src="/images/8480522.jpg" alt="">
+  <img src="images/8480522.jpg" alt="">
 
   <script src="bmi.js"></script>
 </body>
